--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -12,7 +12,15 @@
 
 <p>
   <strong>Brewery:</strong>
-  <%= @beer.brewery_id %>
+  <%= @beer.brewery.name %>
+</p>
+
+<p>
+  <% if @beer.ratings.empty? %>
+    Not been rated yet!
+  <% else %>
+    Beer has <%= pluralize(@beer.ratings.count, 'rating')  %>, average <%= @beer.average_rating %>
+  <% end %>
 </p>
 
 <%= link_to 'Edit', edit_beer_path(@beer) %> |
