--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,7 +16,8 @@
 
 <ul>
   <% @user.ratings.each do |rating| %>
-      <li><%= rating %>
+      <li>
+        <%= rating %>
         <% if @user == current_user %>
             <%= link_to 'delete', rating, method: :delete, data: { confirm: 'Are you sure?' } %>
         <% end %>
@@ -24,5 +25,11 @@
   <% end %>
 </ul>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
+<% if @user == current_user %>
+    <%= link_to 'Edit', edit_user_path(@user) %>
+    |
+    <%= link_to 'Delete account', @user, method: :delete, data: { confirm: 'Are you sure?' } %>
+    |
+<% end %>
+
 <%= link_to 'Back', users_path %>
