--- a/app/views/beer_clubs/show.html.erb
+++ b/app/views/beer_clubs/show.html.erb
@@ -12,4 +12,4 @@
   <% end %>
 </ul>
 
-<%= link_to 'Edit', edit_beer_club_path(@beer_club) %>
+<%= link_to 'Edit', edit_beer_club_path(@beer_club) if current_user %>
