Fixed bar pages

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -2,5 +2,6 @@
 
 <h1><%= @bar.name %></h1>
 
-<p>@bar.street</p>
-<p>@bar.zip <p>@bar.city</p>
+<p><%= @bar.street %></p>
+<p><%= @bar.zip %></p>
+<p><%= @bar.city %></p>
