--- a/app/views/beer_clubs/show.html.erb
+++ b/app/views/beer_clubs/show.html.erb
@@ -12,4 +12,18 @@
   <% end %>
 </ul>
 
+<% if current_user %>
+    <% if @beer_club.members.include?(current_user) %>
+        <%= form_for(@membership, method: "delete") do |f| %>
+            <%= f.hidden_field :beer_club_id %>
+            <%= f.submit value: "end the membership" %>
+        <% end %>
+    <% else %>
+        <%= form_for(@membership) do |f| %>
+            <%= f.hidden_field :beer_club_id %>
+            <%= f.submit  value: "join the club" %>
+        <% end %>
+    <% end %>
+<% end %>
+
 <%= link_to 'Edit', edit_beer_club_path(@beer_club) if current_user %>
