--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -1,18 +1,10 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @beer.name %>
-</p>
+<h2><%= @beer %></h2>
 
 <p>
   <strong>Style:</strong>
   <%= @beer.style %>
-</p>
-
-<p>
-  <strong>Brewery:</strong>
-  <%= @beer.brewery.name %>
 </p>
 
 <p>
@@ -23,5 +15,15 @@
   <% end %>
 </p>
 
-<%= link_to 'Edit', edit_beer_path(@beer) if current_user %> |
-<%= link_to 'Back', beers_path %>
+<% if current_user %>
+    <h4>give a rating:</h4>
+
+    <%= form_for(@rating) do |f| %>
+        <%= f.hidden_field :beer_id %>
+        score: <%= f.number_field :score %>
+        <%= f.submit %>
+    <% end %>
+
+    <%= link_to 'Edit', edit_beer_path(@beer) %>
+    <%= link_to 'Destroy', @beer, method: :delete, data: { confirm: 'Are you sure?' } %>
+<% end %>
