--- a/app/views/beer_clubs/show.html.erb
+++ b/app/views/beer_clubs/show.html.erb
@@ -16,14 +16,14 @@
     <% if @beer_club.members.include?(current_user) %>
         <%= form_for(@membership, method: "delete") do |f| %>
             <%= f.hidden_field :beer_club_id %>
-            <%= f.submit value: "end the membership" %>
+            <%= f.submit value: "end the membership", class: "btn btn-danger" %>
         <% end %>
     <% else %>
         <%= form_for(@membership) do |f| %>
             <%= f.hidden_field :beer_club_id %>
-            <%= f.submit  value: "join the club" %>
+            <%= f.submit  value: "join the club", class: "btn btn-primary" %>
         <% end %>
     <% end %>
 <% end %>
 
-<%= link_to 'Edit', edit_beer_club_path(@beer_club) if current_user %>
+<%= link_to 'Edit', edit_beer_club_path(@beer_club), class: "btn btn-primary" if current_user %>
