--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -21,9 +21,9 @@
     <%= form_for(@rating) do |f| %>
         <%= f.hidden_field :beer_id %>
         score: <%= f.number_field :score %>
-        <%= f.submit %>
+        <%= f.submit class: "btn btn-primary" %>
     <% end %>
 
-    <%= link_to 'Edit', edit_beer_path(@beer) %>
-    <%= link_to 'Destroy', @beer, method: :delete, data: { confirm: 'Are you sure?' } %>
+    <%= link_to 'Edit', edit_beer_path(@beer), class: "btn btn-primary" %>
+    <%= link_to 'Destroy', @beer, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
 <% end %>
