--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -4,7 +4,7 @@
 
 <p>Number of breweries: <%= @breweries.count %></p>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Name</th>
@@ -18,8 +18,8 @@
       <tr>
         <td><%= link_to brewery.name, brewery %></td>
         <td><%= brewery.year %></td>
-        <td><%= link_to 'Edit', edit_brewery_path(brewery) if current_user %></td>
-        <td><%= link_to 'Destroy', brewery, method: :delete, data: { confirm: 'Are you sure?' } if current_user%></td>
+        <td><%= link_to 'Edit', edit_brewery_path(brewery), class: "btn btn-primary" if current_user %></td>
+        <td><%= link_to 'Destroy', brewery, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" if current_user%></td>
       </tr>
     <% end %>
   </tbody>
@@ -27,6 +27,6 @@
 
 <br>
 
-<%= link_to 'New Brewery', new_brewery_path if current_user %>
+<%= link_to 'New Brewery', new_brewery_path, class: "btn btn-primary" if current_user %>
 <br>
-<%= link_to 'List of beers', beers_path %>
+<%= link_to 'List of beers', beers_path, class: "btn btn-primary" %>
