--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -31,6 +31,6 @@
     <%= f.password_field :password_confirmation %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: "btn btn-primary" %>
   </div>
 <% end %>
