--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -32,17 +32,15 @@
       <li>
         <%= rating %>
         <% if @user == current_user %>
-            <%= link_to 'delete', rating, method: :delete, data: { confirm: 'Are you sure?' } %>
+            <%= link_to 'delete', rating, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
         <% end %>
       </li>
   <% end %>
 </ul>
 
 <% if @user == current_user %>
-    <%= link_to 'Edit', edit_user_path(@user) %>
-    |
-    <%= link_to 'Delete account', @user, method: :delete, data: { confirm: 'Are you sure?' } %>
-    |
+    <%= link_to 'Edit', edit_user_path(@user), class: "btn btn-primary" %>
+    <%= link_to 'Delete account', @user, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
 <% end %>
 
-<%= link_to 'Back', users_path %>
+<%= link_to 'Back', users_path, class: "btn btn-primary" %>
