Application helper and improvements to layout

--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -11,7 +11,7 @@
   <% if @beer.ratings.empty? %>
     Not been rated yet!
   <% else %>
-    Beer has <%= pluralize(@beer.ratings.count, 'rating')  %>, average <%= @beer.average_rating %>
+    Beer has <%= pluralize(@beer.ratings.count, 'rating')  %>, average <%= round(@beer.average_rating) %>
   <% end %>
 </p>
 
@@ -24,6 +24,5 @@
         <%= f.submit class: "btn btn-primary" %>
     <% end %>
 
-    <%= link_to 'Edit', edit_beer_path(@beer), class: "btn btn-primary" %>
-    <%= link_to 'Destroy', @beer, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
+    <%= edit_and_destroy_buttons(@beer) %>
 <% end %>
