--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -21,9 +21,10 @@
   <% if @brewery.ratings.empty? %>
       Not been rated yet!
   <% else %>
-      Has <%= pluralize(@brewery.ratings.count, 'rating')  %>, average <%= @brewery.average_rating %>
+      Has <%= pluralize(@brewery.ratings.count, 'rating')  %>, average <%= round(@brewery.average_rating) %>
   <% end %>
 </p>
 
-<%= link_to 'Edit', edit_brewery_path(@brewery), class: "btn btn-primary" if current_user %>
-<%= link_to 'Back', breweries_path, class: "btn btn-primary" %>
+<p><%= link_to "Change activity", toggle_activity_brewery_path(@brewery.id), method: :post, class: "btn btn-primary" %></p>
+
+<%= edit_and_destroy_buttons(@brewery) %>
