--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,15 +6,18 @@
   <thead>
     <tr>
       <th>Username</th>
-      <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td><%= user.username %></td>
-        <td><%= link_to 'Show', user, class: "btn btn-primary" %></td>
+        <td><%= link_to user.username, user %></td>
+        <td>
+          <% if current_user.admin? and user.blocked %>
+              <span class="label label-info">account frozen</span>
+          <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
