--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,10 @@
 <p id="notice"><%= notice %></p>
 
-<h2><%= @user.username %></h2>
+<h2><%= @user.username %>
+  <% if current_user and current_user.admin? and @user.blocked  %>
+      <span class="label label-info">account frozen</span>
+  <% end %>
+</h2>
 
 <% if @user.ratings.empty? %>
     <p>has not made any ratings yet</p>
@@ -42,5 +46,14 @@
     <%= link_to 'Edit', edit_user_path(@user), class: "btn btn-primary" %>
     <%= link_to 'Delete account', @user, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %>
 <% end %>
+
+<% if current_user and current_user.admin? %>
+    <% if @user.blocked? %>
+        <%= link_to "Reactivate account", user_toggle_blocked_path(@user.id), method: :post, class: "btn btn-primary" %>
+    <% else %>
+        <%= link_to "Freeze account", user_toggle_blocked_path(@user.id), method: :post, class: "btn btn-danger" %>
+    <% end %>
+<% end %>
+
 
 <%= link_to 'Back', users_path, class: "btn btn-primary" %>
