--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
 
+<% cache @brewery do %>
+
 <h2><%= @brewery.name %>
   <% if not @brewery.active  %>
       <span class="label label-info">retired</span>
@@ -24,6 +26,8 @@
       Has <%= pluralize(@brewery.ratings.count, 'rating')  %>, average <%= round(@brewery.average_rating) %>
   <% end %>
 </p>
+
+<% end %>
 
 <p><%= link_to "Change activity", toggle_activity_brewery_path(@brewery.id), method: :post, class: "btn btn-primary" %></p>
 
