--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -2,6 +2,8 @@
 
 <h1>Listing Beers</h1>
 
+<% cache "beerlist-#{@order}", skip_digest: true do %>
+
 <table class="table table-hover">
   <thead>
     <tr>
@@ -23,7 +25,7 @@
     <% end %>
   </tbody>
 </table>
-
+<% end %>
 <br>
 
 <%= link_to 'New Beer', new_beer_path, class: "btn btn-primary" if current_user %>
