--- a/app/views/breweries/_list.html.erb
+++ b/app/views/breweries/_list.html.erb
@@ -1,18 +1,20 @@
-<table class="table table-hover">
-  <thead>
-  <tr>
-    <th><%= link_to 'Name', breweries_path(order:"name") %></th>
-    <th><%= link_to 'Year', breweries_path(order:"year") %></th>
-  </tr>
-  </thead>
-
-  <tbody>
-  <% breweries.each do |brewery| %>
+<% cache "brewerylist-#{@order}", skip_digest: true do %>
+    <table class="table table-hover">
+      <thead>
       <tr>
-        <td><%= link_to brewery.name, brewery %></td>
-        <td><%= brewery.year %></td>
-        <td></td>
+        <th><%= link_to 'Name', breweries_path(order: "name") %></th>
+        <th><%= link_to 'Year', breweries_path(order: "year") %></th>
       </tr>
-  <% end %>
-  </tbody>
-</table>
+      </thead>
+
+      <tbody>
+      <% breweries.each do |brewery| %>
+          <tr>
+            <td><%= link_to brewery.name, brewery %></td>
+            <td><%= brewery.year %></td>
+            <td></td>
+          </tr>
+      <% end %>
+      </tbody>
+    </table>
+<% end %>
