--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,24 +2,25 @@
 
 <h1>Listing Users</h1>
 
+<h1>Users</h1>
+
 <table class="table table-hover">
   <thead>
-    <tr>
-      <th>Username</th>
-    </tr>
+  <tr>
+    <th>Username</th>
+    <th> rated beers </th>
+    <th> total ratings </th>
+    <th></th>
+  </tr>
   </thead>
-
   <tbody>
-    <% @users.each do |user| %>
+  <% @users.each do |user| %>
       <tr>
         <td><%= link_to user.username, user %></td>
-        <td>
-          <% if current_user.admin? and user.blocked %>
-              <span class="label label-info">account frozen</span>
-          <% end %>
-        </td>
+        <td><%= user.beers.size %></td>
+        <td><%= user.ratings.size %></td>
       </tr>
-    <% end %>
+  <% end %>
   </tbody>
 </table>
 
